objects/ASI_CRM_JP_Sales_Order__c.object
<CustomObject>
    <description>This Sales Order is for PRJ specific use.</description>
    <fields>
        <fullName>ASI_CRM_AKABOU_Delivery_Time__c</fullName>
        <label>AKABOU Delivery Time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_Delivery_Time__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0900-1000</fullName>
                </value>
                <value>
                    <fullName>1000-1100</fullName>
                </value>
                <value>
                    <fullName>1100-1200</fullName>
                </value>
                <value>
                    <fullName>1200-1300</fullName>
                </value>
                <value>
                    <fullName>1300-1400</fullName>
                </value>
                <value>
                    <fullName>1400-1500</fullName>
                </value>
                <value>
                    <fullName>1500-1600</fullName>
                </value>
                <value>
                    <fullName>1600-1700</fullName>
                </value>
                <value>
                    <fullName>1700-1800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_AP_Code__c</fullName>
        <label>A&amp;P Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_Order_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SSSS</fullName>
                </value>
                <value>
                    <fullName>3800</fullName>
                </value>
                <value>
                    <fullName>9013</fullName>
                    <label>9013 (TM)On Visibility(L3F)-RCO32</label>
                </value>
                <value>
                    <fullName>9024</fullName>
                    <label>9024 (TM)Off Activation(L3F)-RCO43</label>
                </value>
                <value>
                    <fullName>9025</fullName>
                    <label>9025 Ambassadors-RCO44</label>
                </value>
                <value>
                    <fullName>9026</fullName>
                    <label>9026 Brand Experience &amp; PR-RCO45</label>
                </value>
                <value>
                    <fullName>4399</fullName>
                    <label>4399 (On-Trade)</label>
                </value>
                <value>
                    <fullName>4499</fullName>
                    <label>4499 (Off-Trade)</label>
                </value>
                <value>
                    <fullName>9019</fullName>
                    <label>9019 (TM)Packaging/VAP (L3F)-RCO34</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Address_Line_2__c</fullName>
        <label>Address Line 2 / Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only PRJ Bank Account  is allowed.</errorMessage>
            <filterItems>
                <field>ASI_CRM_Pay_To__c.ASI_CRM_JP_PRJ_Bank_Account__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Pay_To__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bank_Charge_Number__c</fullName>
        <label>Bank Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bank_Charge_Tax_Area__c</fullName>
        <label>Bank Charge Tax Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CP10</fullName>
                </value>
                <value>
                    <fullName>CP0</fullName>
                </value>
                <value>
                    <fullName>CP8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bank_Charge_Tax__c</fullName>
        <formula>IF(ISPICKVAL( ASI_CRM_Bank_Charge_Tax_Area__c,&quot;CP8&quot;),  ASI_CRM_Bank_Charge_Number__c * 0.08, IF(ISPICKVAL(ASI_CRM_Bank_Charge_Tax_Area__c ,&quot;CP10&quot;), ASI_CRM_Bank_Charge_Number__c * 0.1, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Charge Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bank_Charge__c</fullName>
        <formula>ASI_CRM_Total_Amount_w_Tax__c - ASI_CRM_Money_Collected__c</formula>
        <label>Bank Charge (Obsolete)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch_Plant__c</fullName>
        <label>Branch/Plant</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_Order_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>711</fullName>
                    <default>true</default>
                    <label>711-Tokyo - Marketing only</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <label>111-Tokyo - Normal Stock</label>
                </value>
                <value>
                    <fullName>114</fullName>
                    <label>114-Tokyo Return Only</label>
                </value>
                <value>
                    <fullName>115</fullName>
                    <label>115-Tokyo WIP</label>
                </value>
                <value>
                    <fullName>116</fullName>
                    <label>116-Tokyo - Before Launch</label>
                </value>
                <value>
                    <fullName>117</fullName>
                    <label>117-Tokyo SCM</label>
                </value>
                <value>
                    <fullName>118</fullName>
                    <label>118-Tokyo Mktg POS</label>
                </value>
                <value>
                    <fullName>119</fullName>
                    <label>119-Tokyo Defect-Can Drink</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>120-Tokyo PRJ Office</label>
                </value>
                <value>
                    <fullName>211</fullName>
                    <label>211-Tokyo - Use Event Only(Champagne)</label>
                </value>
                <value>
                    <fullName>214</fullName>
                    <label>214-Tokyo - Use Event Only (All except for Champagne)</label>
                </value>
                <value>
                    <fullName>721</fullName>
                    <label>721-Tokyo - Marketing only (2nd class)</label>
                </value>
                <value>
                    <fullName>131</fullName>
                    <label>131-Osaka - Normal Stock</label>
                </value>
                <value>
                    <fullName>134</fullName>
                    <label>134-Osaka Return Only</label>
                </value>
                <value>
                    <fullName>136</fullName>
                    <label>136-Osaka - Before Launch</label>
                </value>
                <value>
                    <fullName>137</fullName>
                    <label>137-Osaka SCM</label>
                </value>
                <value>
                    <fullName>138</fullName>
                    <label>138-Osaka Mktg POS</label>
                </value>
                <value>
                    <fullName>139</fullName>
                    <label>139-Osaka Defect-Can Drink</label>
                </value>
                <value>
                    <fullName>190</fullName>
                    <label>190-Osaka PRJ Office</label>
                </value>
                <value>
                    <fullName>411</fullName>
                    <label>411-DF Tokyo Normal-Foreign</label>
                </value>
                <value>
                    <fullName>421</fullName>
                    <label>421-DF Tokyo Normal-Domestic</label>
                </value>
                <value>
                    <fullName>426</fullName>
                    <label>426-DF Tokyo 2nd Class-Domestic</label>
                </value>
                <value>
                    <fullName>611</fullName>
                    <label>611-DF Tokyo Domestic</label>
                </value>
                <value>
                    <fullName>612</fullName>
                    <label>612-DF Tokyo On-Pack Material</label>
                </value>
                <value>
                    <fullName>618</fullName>
                    <label>618-DF Komaki POS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Business_Reason__c</fullName>
        <label>EDI Control Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SHANAI</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Champagne__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MM / Wines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_PO_No__c</fullName>
        <label>Customer PO No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Time__c</fullName>
        <label>Delivery Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0900-1200</fullName>
                </value>
                <value>
                    <fullName>1400-1600</fullName>
                </value>
                <value>
                    <fullName>1600-1800</fullName>
                </value>
                <value>
                    <fullName>1800-2000</fullName>
                </value>
                <value>
                    <fullName>1900-2100</fullName>
                </value>
                <value>
                    <fullName>AKABOU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Freight_Code__c</fullName>
        <label>Freight Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MS</fullName>
                    <default>true</default>
                    <label>MS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_INMG__c</fullName>
        <label>INMG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SHANAI</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Failure_Reason__c</fullName>
        <label>JDE Failure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Credit Limit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JDE Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_AddressLine2_Phone_Report__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;ASI_CRM_JP_Direct_Sales&apos; || RecordType.DeveloperName = &apos;ASI_CRM_JP_Direct_Sales_Locked&apos;,
    ASI_CRM_Ship_To__r.ASI_CRM_JP_Town__c ,
     ASI_CRM_Address_Line_2__c )</formula>
        <label>Address Line 2 / Phone (For Report)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Address_Line_1_For_Report__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;ASI_CRM_JP_Direct_Sales&apos; || RecordType.DeveloperName = &apos;ASI_CRM_JP_Direct_Sales_Locked&apos;,
    ASI_CRM_Ship_To__r.ASI_CRM_JP_City_Ward__c ,
    ASI_CRM_Address_Line_1__c)</formula>
        <label>Address Line 1 (For Report)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approval_hour__c</fullName>
        <formula>VALUE( MID( TEXT(  ASI_CRM_JP_SO_Approval_Date__c  + 9/24 ), 12, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Hour (in JP Time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_OrdersHTFI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_OrdersHTFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_OrdersHTFc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Auto_Canceled_del__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox will be automatically checked in case shipping lead time is not enough compare to requested delivery date.</inlineHelpText>
        <label>Auto Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please wait until Customer Informaiton is synced to JDE. The schedules are around 12:30, 16:30, and 23:30.</errorMessage>
            <filterItems>
                <field>$Source.ASI_CRM_Sold_To__c</field>
                <operation>equals</operation>
                <valueField>ASI_CRM_Bill_To__c.ASI_CRM_Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Bill_To__c.ASI_CRM_JP_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Bill_To__c.ASI_CRM_JP_Bill_To_JDE__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Bill_To__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Company_Event_HR_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Only Company Event (Emp#5999/Ent#8999</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Entertainment_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entertainment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_JP_Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Has_Original_Sales_Order__c</fullName>
        <formula>NOT( ISBLANK( ASI_CRM_JP_Original_Sales_Order__c ))</formula>
        <label>Has Original Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_JDE_Delivery_Date__c</fullName>
        <label>JDE Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_JDE_Failure_Reason__c</fullName>
        <label>JDE Failure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Credit Limit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_JDE_SO_number__c</fullName>
        <label>JDE SO number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_JDE_Shipped_Date__c</fullName>
        <label>JDE Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_JDE_Status__c</fullName>
        <label>JDE Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_JDE_Sync_Date__c</fullName>
        <label>JDE Sync Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_MFM_PO_No__c</fullName>
        <label>MFM PO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Mailing_Name_For_Report__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;ASI_CRM_JP_Direct_Sales&apos; || RecordType.DeveloperName = &apos;ASI_CRM_JP_Direct_Sales_Locked&apos;,
     ASI_CRM_Ship_To__r.ASI_CRM_Customer_Name_Kanji__c ,
     ASI_CRM_Mailing_Name__c )</formula>
        <label>Mailing Name (For Report)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_No_of_Low_Price_Order_Lines__c</fullName>
        <label>No. of Low Price Order Lines</label>
        <summaryFilterItems>
            <field>ASI_CRM_JP_Sales_Order_Item__c.ASI_CRM_JP_Lower_than_Base_Price__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_JP_Sales_Order_Item__c.ASI_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Number_of_Sales_Order_Item__c</fullName>
        <label>Number of Sales Order Item</label>
        <summaryForeignKey>ASI_CRM_JP_Sales_Order_Item__c.ASI_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Original_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Sales Order</label>
        <referenceTo>ASI_CRM_JP_Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Owner_s_Salesman_Code__c</fullName>
        <formula>Owner:User.ASI_TnE_Sub_Ledger__c</formula>
        <label>Owner&apos;s Salesman Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_PJ_Martell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PJ / Martell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Partial_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Price_Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Remark_2__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_SO_Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Ship_To_Address__c</fullName>
        <formula>ASI_CRM_Ship_To__r.ASI_CRM_CN_Address__c</formula>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Ship_To_EnName_With_CRM_Code__c</fullName>
        <formula>ASI_CRM_Ship_To__r.ASI_CRM_VN_EnglishName__c + &quot; (&quot; + ASI_CRM_Ship_To__r.ASI_CRM_CN_CRM_Code__c + &quot;)&quot;</formula>
        <label>Ship To English Name With CRM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Ship_To_JDE_Code__c</fullName>
        <formula>ASI_CRM_Ship_To__r.ASI_CRM_CN_JDE_Code__c</formula>
        <label>Ship To JDE Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Ship_To_Phone_Number__c</fullName>
        <formula>ASI_CRM_Ship_To__r.ASI_CRM_CN_Phone_Number__c</formula>
        <label>Ship To Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Shipping_Date__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sold_To_Address__c</fullName>
        <formula>ASI_CRM_Sold_To__r.ASI_CRM_CN_Address__c</formula>
        <label>Sold To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sold_To_EngName_With_CRM_Code__c</fullName>
        <formula>ASI_CRM_Sold_To__r.ASI_CRM_VN_EnglishName__c + &quot; (&quot; +  ASI_CRM_Sold_To__r.ASI_CRM_CN_CRM_Code__c  + &quot;)&quot;</formula>
        <label>Sold To English Name With CRM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sold_To_JDE_Code__c</fullName>
        <formula>ASI_CRM_Sold_To__r.ASI_CRM_CN_JDE_Code__c</formula>
        <label>Sold To JDE Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sold_To_Phone_Number__c</fullName>
        <formula>ASI_CRM_Sold_To__r.ASI_CRM_CN_Phone_Number__c</formula>
        <label>Sold To Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sys_Entertmnt_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Entertainment Owner&apos;s Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Target_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Sales Orders (Target Customer)</relationshipLabel>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Taxable_Service_Charge__c</fullName>
        <label>Taxable Service Charge</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_Payment_Option__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Trade_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latest_Approval_Date__c</fullName>
        <label>Latest Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Mailing_Name__c</fullName>
        <label>Mailing Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Minimal_Requested_Date__c</fullName>
        <label>Minimal Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Money_Collected__c</fullName>
        <label>Money Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <label>Order Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal SO</fullName>
                </value>
                <value>
                    <fullName>Sample Sales</fullName>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
                <value>
                    <fullName>Direct Sales SO</fullName>
                </value>
                <value>
                    <fullName>Employee SO</fullName>
                </value>
                <value>
                    <fullName>Entertainment Sales</fullName>
                </value>
                <value>
                    <fullName>Sample SO</fullName>
                </value>
                <value>
                    <fullName>Marketing FOC</fullName>
                </value>
                <value>
                    <fullName>Normal Sales SO</fullName>
                </value>
                <value>
                    <fullName>Marketing FOC - Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Option__c</fullName>
        <label>Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COD</fullName>
                </value>
                <value>
                    <fullName>Advanced Payment</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Request_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Term__c</fullName>
        <label>Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>EXP</fullName>
                </value>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>F2</fullName>
                </value>
                <value>
                    <fullName>G1</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>MAT</fullName>
                </value>
                <value>
                    <fullName>MK1</fullName>
                </value>
                <value>
                    <fullName>MK2</fullName>
                </value>
                <value>
                    <fullName>MRK</fullName>
                </value>
                <value>
                    <fullName>NOC</fullName>
                </value>
                <value>
                    <fullName>NTS</fullName>
                </value>
                <value>
                    <fullName>OKM</fullName>
                </value>
                <value>
                    <fullName>OKZ</fullName>
                </value>
                <value>
                    <fullName>OSM</fullName>
                </value>
                <value>
                    <fullName>OSZ</fullName>
                </value>
                <value>
                    <fullName>OVR</fullName>
                </value>
                <value>
                    <fullName>PQW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>JDE Remark</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Requested_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Route_Code__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Shipping Lead Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Salesman_Code__c</fullName>
        <label>Salesman Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Salesman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesman</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Japan user can be selected</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>JP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_OrdersHZtJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ship_To_Prefecture__c</fullName>
        <formula>Text(ASI_CRM_Ship_To__r.ASI_CRM_JP_Prefecture__c)</formula>
        <label>Ship To Prefecture</label>
        <type>Text</type>
    </fields>
</CustomObject>